--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "rxjs": "^5.1.0",
     "sass-loader": "^6.0.5",
+    "tether": "^1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
