--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "prodBuild": "ng build --prod && cd dist && webpc -r",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -28,6 +29,8 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "ng-lazyload-image": "^3.3.1",
+    "ng2-sticky-kit": "^4.1.0",
     "node-sass": "^4.5.3",
     "rxjs": "^5.1.0",
     "sass-loader": "^6.0.5",
