--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "ng-lazyload-image": "^3.3.1",
     "ng2-sticky-kit": "^4.1.0",
     "node-sass": "^4.5.3",
+    "popper.js": "^1.16.0",
     "rxjs": "^5.1.0",
     "sass-loader": "^6.0.5",
     "tether": "^1.4.0",
@@ -56,6 +57,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "webp-converter-cli": "0.0.5"
   }
 }
